--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
-.header {
+body {
+    font-family: roboto, Helvetica;
+}
+
+.header, .footer {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    background-color: #1F2937;
+}
+
+.header-logo {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 ul {
     display: flex;
     list-style: none;
+    gap: 24px;
 }
 
 a {
     text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.footer {
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 24px;
 }
