--- a/style.css
+++ b/style.css
@@ -2,11 +2,51 @@ body {
     font-family: roboto, Helvetica;
 }
 
-.header, .footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.hero {
     background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+}
+
+.header, .hero-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header {
+    padding: 0 200px;
+    align-items: center;
+}
+
+.hero-content {
+    padding: 125px 200px;
+    gap: 24px;
+}
+
+.hero-text {
+    width: 500px;
+}
+
+.big-text {
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.hero-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 8px 24px;
+    margin: 12px 0px;
+    border-radius: 12px;
+}
+
+.hero-image {
+    background-color: gray;
+    height: 150px;
+    width: 450px;
 }
 
 .header-logo {
@@ -21,14 +61,19 @@ ul {
     gap: 24px;
 }
 
-a {
+a, .smaller-text {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
 }
 
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
     font-size: 18px;
     color: #E5E7EB;
     padding: 24px;
 }
+
