--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     font-size: 18px;
     padding: 8px 24px;
     margin: 12px 0px;
+    border: none;
     border-radius: 12px;
 }
 
@@ -65,6 +66,50 @@ a, .smaller-text {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.body1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.body-header {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+    padding-bottom: 75px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-pic {
+    background-color: #F9FAF8;
+    border: 4px solid;
+    border-color: #3882F6;
+    border-radius: 12px;
+    min-height: 150px;
+    min-width: 150px;
 }
 
 .footer {
