--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 
 .hero-image {
     background-color: gray;
-    height: 150px;
+    height: 200px;
     width: 450px;
 }
 
@@ -110,6 +110,23 @@ a, .smaller-text {
     border-radius: 12px;
     min-height: 150px;
     min-width: 150px;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-style: italic;
+    padding: 100px 300px;
+}
+
+.quoted {
+    font-style: normal;
+    font-weight: bold;
+    display: flex;
+    justify-content: right;
 }
 
 .footer {
