Add call to action section, clean up css, and add copyright symbol in footer

--- a/style.css
+++ b/style.css
@@ -68,11 +68,6 @@ a, .smaller-text {
     font-size: 18px;
 }
 
-.main-content {
-    display: flex;
-    flex-direction: column;
-}
-
 .body1 {
     display: flex;
     flex-direction: column;
@@ -85,7 +80,7 @@ a, .smaller-text {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px;
+    padding: 36px;
 }
 
 .cards {
@@ -93,7 +88,7 @@ a, .smaller-text {
     justify-content: center;
     align-items: center;
     gap: 48px;
-    padding-bottom: 75px;
+    padding-bottom: 100px;
 }
 
 .card {
@@ -127,6 +122,39 @@ a, .smaller-text {
     font-weight: bold;
     display: flex;
     justify-content: right;
+}
+
+.box {
+    background-color: #3882F6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 100px 200px;
+    padding: 50px 0px;
+    border-radius: 12px;
+}
+
+.box-text {
+    color: #F9FAF8;
+}
+
+.box-text1 {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.box-text2 {
+    font-size: 24px;
+}
+
+.box-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: 2px solid #F9FAF8;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 8px 36px;
+    border-radius: 12px;
 }
 
 .footer {
