--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
-    font-family: roboto, Helvetica;
+    font-family: Roboto, Helvetica;
 }
 
 .hero {
@@ -48,6 +50,7 @@ body {
     background-color: gray;
     height: 200px;
     width: 450px;
+    object-fit: cover;
 }
 
 .header-logo {
@@ -86,7 +89,7 @@ a, .smaller-text {
 .cards {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 48px;
     padding-bottom: 100px;
 }
@@ -94,17 +97,24 @@ a, .smaller-text {
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
 .card-pic {
+    display: flex;
+    align-items: center;
     background-color: #F9FAF8;
     border: 4px solid;
     border-color: #3882F6;
     border-radius: 12px;
-    min-height: 150px;
-    min-width: 150px;
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+}
+
+.subtext {
+    width: 150px;
+    text-align: center;
 }
 
 .quote {
